# aurora-notifications

./: Cargo.toml  init.sql  remove_duplicates.sql
src/: db.rs  main.rs  records.rs
