[package]
name = "aurora-thing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
dotenv = "0.15.0"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.225"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
